# sae-feature-extractor

./: .gitignore  README.md  main.py  pyproject.toml
feature_extractor/: config.py  extractor.py  stage.py  utils.py
feature_extractor/reid_inference/: reid_model.py
feature_extractor/reid_inference/baseline/model/: make_model.py
feature_extractor/reid_inference/baseline/model/backbones/: resnet_ibn_a.py
pyproject/: pyproject.toml
