[tool.poetry]
name = "mystage"
version = "0.1.0"
description = ""
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.10.0" }
redis = "^5.0.0"
pydantic-settings = "^2.0.3"
prometheus-client = "^0.17.1"
torch = "2.3.0"
torchvision = "0.18.0"
yacs = "0.1.8"
opencv-python = "^4.10.0.84"
protobuf = "^5.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
